--- a/OpsManage/templates/accounts/userEdit.html
+++ b/OpsManage/templates/accounts/userEdit.html
@@ -31,7 +31,7 @@
                                     <input type="password" name="checkPassword" id="checkPassword" class="ld_pass" placeholder="再次输入"/>
                                 </p>
                                 <div class="ld_login">
-                                    <button onclick="checkPwd()" class="ld_login_in" id="bt-login">登录</button>
+                                    <button onclick="checkPwd()" class="ld_login_in" id="bt-login">提交</button>
                                     <div id="login-msg"></div>
 
                                 </div>
