--- a/OpsManage/templates/base.html
+++ b/OpsManage/templates/base.html
@@ -227,7 +227,7 @@ desired effect
                 <li class="header">service</li>
 
                 <li>
-                  <a href="pages/calendar.html">
+                  <a href="#">
                     <i class="fa fa-calendar"></i> <span>日历</span>
                   </a>
                 </li>
