--- a/OpsManage/templates/cmdb/ServerManage/add/editForeignKey/editSupplier.html
+++ b/OpsManage/templates/cmdb/ServerManage/add/editForeignKey/editSupplier.html
@@ -97,17 +97,17 @@
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label class=" control-label">供应商名称</label>
-                                        <input class="form-control" type="text" name="name" placeholder="supplier name">
+                                        <input  required class="form-control" type="text" name="name" placeholder="supplier name">
                                     </div>
 
                                     <div class="form-group">
                                         <label class="control-label">联系人</label>
-                                        <input class="form-control" type="text" name="contact" placeholder="contact">
+                                        <input  required class="form-control" type="text" name="contact" placeholder="contact">
                                     </div>
 
                                     <div class="form-group">
                                         <label class=" control-label">联系电话</label>
-                                        <input class="form-control" type="text" name="phone" placeholder="phone">
+                                        <input required  class="form-control" type="text" name="phone" placeholder="phone">
                                     </div>
 
                                     <div class="form-group">
@@ -139,17 +139,17 @@
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label class=" control-label">供应商名称</label>
-                                        <input class="form-control" type="text" name="name" value="{{ SUPPLIER.supplier_name}}">
+                                        <input  required class="form-control" type="text" name="name" value="{{ SUPPLIER.supplier_name}}">
                                     </div>
 
                                     <div class="form-group">
                                         <label class="control-label">联系人</label>
-                                        <input class="form-control" type="text" name="contact" value="{{ SUPPLIER.supplier_contacts }}">
+                                        <input required  class="form-control" type="text" name="contact" value="{{ SUPPLIER.supplier_contacts }}">
                                     </div>
 
                                     <div class="form-group">
                                         <label class=" control-label">联系电话</label>
-                                        <input class="form-control" type="text" name="phone" value="{{ SUPPLIER.supplier_phone}}">
+                                        <input  required class="form-control" type="text" name="phone" value="{{ SUPPLIER.supplier_phone}}">
                                     </div>
 
                                     <div class="form-group">
