--- a/OpsManage/templates/cmdb/ServerManage/add/editForeignKey/editVendor.html
+++ b/OpsManage/templates/cmdb/ServerManage/add/editForeignKey/editVendor.html
@@ -95,7 +95,7 @@
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label class=" control-label">厂商名称</label>
-                                        <input class="form-control" type="text" name="name" placeholder="vendor name">
+                                        <input  required class="form-control" type="text" name="name" placeholder="vendor name">
                                     </div>
 
                                     <div class="form-group">
@@ -132,7 +132,7 @@
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label class=" control-label">厂商名称</label>
-                                        <input class="form-control" type="text" name="name" value="{{ VENDOR.vendor_name}}">
+                                        <input  required class="form-control" type="text" name="name" value="{{ VENDOR.vendor_name}}">
                                     </div>
 
                                     <div class="form-group">
