--- a/OpsManage/templates/cmdb/basicData/editOrg.html
+++ b/OpsManage/templates/cmdb/basicData/editOrg.html
@@ -96,7 +96,7 @@
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label class=" control-label">单位名称</label>
-                                        <input class="form-control" type="text" name="name" placeholder="org name">
+                                        <input required class="form-control" type="text" name="name" placeholder="org name">
                                     </div>
 
                                     <div class="form-group">
@@ -143,7 +143,7 @@
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label class=" control-label">单位名称</label>
-                                        <input class="form-control" type="text" name="name" value="{{ ORGANIZATION.org_name}}">
+                                        <input required class="form-control" type="text" name="name" value="{{ ORGANIZATION.org_name}}">
                                     </div>
 
                                     <div class="form-group">
