--- a/OpsManage/templates/cmdb/ServerManage/add/editForeignKey/editModel.html
+++ b/OpsManage/templates/cmdb/ServerManage/add/editForeignKey/editModel.html
@@ -118,7 +118,7 @@
 
                                     <div class="form-group">
                                         <label class=" control-label">设备型号</label>
-                                        <input class="form-control" type="text" name="models" placeholder="model">
+                                        <input  required class="form-control" type="text" name="models" placeholder="model">
                                     </div>
 
                                 </div>
@@ -163,7 +163,7 @@
 
                                     <div class="form-group">
                                         <label class=" control-label">设备型号</label>
-                                        <input class="form-control" type="text" name="models" value="{{ MODEL.models }}">
+                                        <input  required class="form-control" type="text" name="models" value="{{ MODEL.models }}">
                                     </div>
 
                                 </div>
