--- a/OpsManage/templates/cmdb/ServerManage/edit/editARecord.html
+++ b/OpsManage/templates/cmdb/ServerManage/edit/editARecord.html
@@ -99,8 +99,9 @@
                     <!-- 购买日期 -->
                     <div class="form-group">
                         <label for="purchase_day">购买日期</label><br>
-                        <input required class="form-control" type="date" name="purchase_day" id="purchase_day" value="{{ PURCHASE_DAY }}">
-                        </select>
+                        <input required class="form-control inline" type="date" name="purchase_day" id="purchase_day" value="{{ PURCHASE_DAY }}">
+                        <label class="btn fa fa-check-square-o "></label>
+
                     </div>
                     <!-- /.购买日期 -->
 
@@ -135,7 +136,7 @@
                     <!-- 设备状态 -->
                     <div class="form-group">
                         <label for="status">设备状态</label><br>
-                        <select class="form-control select2 " id="status" name="status">
+                        <select required class="form-control select2 inline" id="status" name="status">
                             {% if ASSET.status %}
                                 <option value="{{ ASSET.status }}" selected="selected">{{ ASSET.get_status_display }}</option>
                                 {% else %}
@@ -146,6 +147,8 @@
                             <option value="3">故障</option>
                             <option value="4">其它</option>
                         </select>
+                        <label class="btn fa fa-check-square-o "></label>
+
                     </div>
                     <!-- /.设备状态 -->
 
@@ -175,8 +178,9 @@
                     <!-- 过保日期 -->
                     <div class="form-group">
                         <label for="expire_day">过保日期</label><br>
-                        <input required class="form-control" type="date" name="expire_day" id="expire_day" value="{{ EXPIRE_DAY }}">
-                        </select>
+                        <input required class="form-control inline" type="date" name="expire_day" id="expire_day" value="{{ EXPIRE_DAY }}">
+                        <label class="btn fa fa-check-square-o "></label>
+
                     </div>
                     <!-- /.过保日期 -->
 
@@ -228,6 +232,9 @@
                             {% endfor%}
                         </select>
                         <label class="btn fa fa-check-square-o"></label>
+                        <a class="btn no-padding no-margin" target="_blank" href="/cmdb/editVendor">
+                            <i class="fa  fa-cog"></i>
+                        </a>
                     </div>
                     <!-- /.设备类型 -->
 
@@ -393,7 +400,10 @@
                         <a class="btn no-padding no-margin" target="_blank" href="/cmdb/editModel">
                             <i class="fa  fa-cog"></i>
                         </a>
+                        <div style="font-size: 12px; color: grey">*请先选择设备品牌</div>
+
                     </div>
+
                     <!-- /.设备型号 -->
                 </div>
                 <!-- /第二行，第四列 -->
