--- a/OpsManage/templates/cmdb/basicData/contractManage.html
+++ b/OpsManage/templates/cmdb/basicData/contractManage.html
@@ -89,7 +89,7 @@
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label class=" control-label">合同名称</label>
-                                        <input class="form-control" type="text" name="name" placeholder="Contract number">
+                                        <input required class="form-control" type="text" name="name" placeholder="Contract number">
                                     </div>
 
                                     <div class="form-group">
@@ -131,7 +131,7 @@
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label class=" control-label">合同名称</label>
-                                        <input class="form-control" type="text" name="name" value="{{ CONTRACT.contract_name }}">
+                                        <input required class="form-control" type="text" name="name" value="{{ CONTRACT.contract_name }}">
                                     </div>
 
                                     <div class="form-group">
