--- a/OpsManage/templates/cmdb/basicData/editCab.html
+++ b/OpsManage/templates/cmdb/basicData/editCab.html
@@ -94,7 +94,7 @@
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label class=" control-label">机柜名称</label>
-                                        <input class="form-control" type="text" name="name" placeholder="cabinet name">
+                                        <input required class="form-control" type="text" name="name" placeholder="cabinet name">
                                     </div>
 
                                     <div class="form-group">
@@ -104,7 +104,7 @@
 
                                     <div class="form-group">
                                         <label class=" control-label">机柜高度</label>
-                                        <input class="form-control" type="number" name="height" placeholder="cabinet height">
+                                        <input class="form-control" type="number" min="0" max="42" name="height" placeholder="cabinet height">
                                     </div>
 
                                 </div>
@@ -132,7 +132,7 @@
                                 <div class="box-body">
                                     <div class="form-group">
                                         <label class=" control-label">机柜名称</label>
-                                        <input class="form-control" type="text" name="name" value="{{CABINET.cabinet_name}}">
+                                        <input  required class="form-control" type="text" name="name" value="{{CABINET.cabinet_name}}">
                                     </div>
 
                                     <div class="form-group">
@@ -142,7 +142,7 @@
 
                                     <div class="form-group">
                                         <label class=" control-label">机柜高度</label>
-                                        <input class="form-control" type="number" name="height" value="{{ CABINET.cabinet_height}}">
+                                        <input class="form-control" type="number" min="0" max="42" name="height" value="{{ CABINET.cabinet_height}}">
                                     </div>
                                 </div>
 
