--- a/OpsManage/templates/cmdb/basicData/modelManage.html
+++ b/OpsManage/templates/cmdb/basicData/modelManage.html
@@ -107,7 +107,7 @@
 
                                     <div class="form-group">
                                         <label class=" control-label">设备型号</label>
-                                        <input class="form-control" type="text" name="models" placeholder="model">
+                                        <input required class="form-control" type="text" name="models" placeholder="model">
                                     </div>
 
                                 </div>
@@ -149,7 +149,7 @@
 
                                     <div class="form-group">
                                         <label class=" control-label">设备型号</label>
-                                        <input class="form-control" type="text" name="models" value="{{ MODEL.models }}">
+                                        <input required class="form-control" type="text" name="models" value="{{ MODEL.models }}">
                                     </div>
 
                                 </div>
