--- a/OpsManage/templates/cmdb/ServerManage/add/add.html
+++ b/OpsManage/templates/cmdb/ServerManage/add/add.html
@@ -48,7 +48,7 @@
     </div>
 
     <!-- /.box-header -->
-    <form class="contact" action="addSubmit" method="post" id="form">
+    <form class="contact" action="addSubmit" method="post" id="addForm" enctype=”multipart/form-data”>
         <div class="box-body">
 
             <div class="row" style="margin-top: 25px">
@@ -58,7 +58,7 @@
                     <!-- 资产名称 -->
                     <div class="form-group">
                         <label for="asset_name">资产名称</label><br>
-                        <input required class="form-control inline" type="text" name="asset_name" id="asset_name"
+                        <input  required class="form-control inline" type="text" name="asset_name" id="asset_name"
                                placeholder="请输入资产名称">
                         <label class="btn fa fa-check-square-o "></label>
                     </div>
@@ -107,7 +107,7 @@
                             <option value="0">审批人</option>
                             {% for User in Users %}
                             <option value={{ User.id}}>{{ User.username }}</option>
-                            {% endfor %}
+                            {% endfor %}enctype=”multipart/form-data”
                         </select>
                     </div>
                     <!-- /.审批人 -->
@@ -407,7 +407,7 @@
         <!-- /.box-body -->
 
         <div class="box-footer">
-            <input class="submit btn  btn-primary pull-right" type="submit"  id="submit" value="下一步">
+            <button type="button" onclick="doVerify()" class="btn  btn-primary pull-right" >下一步</button>
             <button type="button" class="btn  btn-success" onclick="window.location.href='/cmdb/asset'">取消</button>
         </div>
 
@@ -487,6 +487,35 @@
         });
     });
 
+    function doVerify(){
+        var asset_name =$("#asset_name").val();
+        var asset_no=$("#asset_no").val();
+        var sn=$("#sn").val();
+        if (asset_name != "" && asset_no != "" && sn != ""){
+            $.ajax({
+                url:"http://127.0.0.1:8000/cmdb/doVerify",
+                data:{"asset_name":asset_name,"asset_no":asset_no,"sn":sn},
+                type:"post",
+                success:function(data){
+                    if(data['asset_name']){
+                        alert("提交失败，资产名称已存在！")
+                    }
+                    else if (data['asset_no']){
+                        alert("提交失败，资产编号已存在！")
+                    }
+                    else if(data['sn']){
+                        alert("提交失败，序列号sn已存在！")
+                    }
+                    else {
+                        document.getElementById('addForm').submit();
+                    }
+                }
+
+            });
+        }else{
+            alert("提交失败，请检查必填项是否已全部填写！")
+        }
+    }
 </script>
 {% endblock foot_js %}
 
