--- a/OpsManage/templates/cmdb/ServerManage/edit/editARecord.html
+++ b/OpsManage/templates/cmdb/ServerManage/edit/editARecord.html
@@ -595,7 +595,7 @@
         <!-- /.box-body -->
 
         <div class="box-footer">
-            <button type="button" onclick="doVerify({{ ID }})" class="btn  btn-primary pull-right" >下一步</button>
+            <button type="button" onclick="doVerify({{ ID }})" class="btn  btn-primary pull-right" >完成</button>
             <button type="button" class="btn  btn-success" onclick="window.location.href='/cmdb/asset'">取消</button>
             <button type="button" class="btn btn-warning pull-right margin-r-5" onclick="window.location.href='http://127.0.0.1:8000/cmdb/editMore?assetId={{ ASSET.id }}'">编辑部件</button>
 
