--- a/OpsManage/templates/cmdb/ServerManage/asset.html
+++ b/OpsManage/templates/cmdb/ServerManage/asset.html
@@ -290,7 +290,7 @@
     function detail(n) {
         layer.open({
             type: 2,
-            title: '资产信息',
+            title: '设备详细信息',
             closeBtn: 1,
             area: ['960px', '700px'],
             shade: 0.5,
