--- a/OpsManage/templates/cmdb/index.html
+++ b/OpsManage/templates/cmdb/index.html
@@ -3,33 +3,7 @@
 
 {% block main_content %}
 <div class="row">
-    <!--<div >-->
-          <!--<div class="col-md-4">-->
-          <!--<div class="info-box bg-red">-->
-            <!--<span class="info-box-icon"><i class="fa fa-cubes"></i></span>-->
 
-            <!--<div class="info-box-content">-->
-              <!--<span class="info-box-text">中线局(京津冀)IT资产总数</span>-->
-              <!--<span class="info-box-number text-center" style="font-size: 20px;"> {{asset_total}}</span>-->
-
-              <!--<div class="progress">-->
-                <!--<div class="progress-bar" style="width: 100%"></div>-->
-              <!--</div>-->
-                  <!--<span class="progress-description" style="font-size: 14px">-->
-                    <!--服务器设备、存储设备、网络设备、安全设备-->
-                  <!--</span>-->
-            <!--</div>-->
-            <!--&lt;!&ndash; /.info-box-content &ndash;&gt;-->
-          <!--</div>-->
-          <!--&lt;!&ndash; /.info-box &ndash;&gt;-->
-        <!--</div>-->
-    <!--</div >-->
-
-    <!--<div>-->
-        <!--<div class="col-md-1">-->
-            <!--<img src="/static/resources/common/server001.jpg"  width="100%"  height="100%" alt="asset">-->
-        <!--</div>-->
-    <!--</div>-->
 
 
     <div>
@@ -55,7 +29,7 @@
 
             <div class="info-box-content">
               <span class="info-box-text">网络设备</span>
-              <span class="info-box-number text-center" style="font-size: 24px;line-height: 45px"">{{network_total}}</span>
+              <span class="info-box-number text-center" style="font-size: 24px;line-height: 45px">{{network_total}}</span>
             </div>
             <!-- /.info-box-content -->
           </div>
