--- a/OpsManage/templates/cmdb/basicData/addIdc.html
+++ b/OpsManage/templates/cmdb/basicData/addIdc.html
@@ -54,7 +54,7 @@
 </head>
 <body>
 
-<section id="getintouch" class="rotateInUpLeft animated">
+<section id="getintouch">
         <div class="container2" style="border-bottom: 0;">
             <h1>
                 <span>填写机房信息</span>
