--- a/OpsManage/templates/cmdb/basicData/idcManage.html
+++ b/OpsManage/templates/cmdb/basicData/idcManage.html
@@ -104,7 +104,10 @@
             </div>
         </div>
         {% endfor %}
+        <div style="clear: left">
+            <button class="btn btn-success" style="width: 100px;margin-left: 30px;margin-bottom: 20px;" onclick="window.open('http://127.0.0.1:8000/cmdb/addIdc')">添加机房</button>
 
+        </div>
     </div>
 </div>
 {% endblock main_content %}
